# TrackMail

./: README.md  quadr_solve.c  testing.c
Task_1_quadratic_equation/: CMakeLists.txt  Makefile  README.md  main.c  main.cpp  quadr_solve.c  quadr_solve.h  testing.h  tests.txt
Task_2_onegin/: Makefile  README.md  converter.cpp  converter.h  main.c  main.cpp  my_string.c  my_string.h  origin.txt  remake1.txt  remake2.txt  sorter.cpp  sorter.h  tester.cpp  tester.h  testing.c  testing.h
Task_3_stack/: Makefile  README.md  logs.hpp  main.cpp  stack.hpp  stacklib.hpp
Task_4_cpu/: CMakeLists.txt  README.md
Task_4_cpu/cpp/assembler/: assembler.cpp  assembler.h  main.cpp
Task_4_cpu/cpp/disassembler/: disassembler.cpp  disassembler.h  main.cpp
Task_4_cpu/cpp/executor/: executor.cpp  executor.h  main.cpp
Task_4_cpu/cpp/interpreter/: main.cpp
Task_4_cpu/cpp/lexer/: lexer.cpp  lexer.h
Task_4_cpu/cpp/lexer/token/: token.cpp  token.h
Task_4_cpu/cpp/parser/: parser.cpp  parser.h
Task_4_cpu/cpp/parser/nodes/: command_type.cpp  command_type.h  nodes.cpp  nodes.h
Task_4_cpu/cpp/utils/: error_codes.h
Task_4_cpu/cpp/utils/checked_actions/: checked_io.cpp  checked_io.h
Task_4_cpu/cpp/utils/console_args/: console_args.cpp  console_args.h
Task_4_cpu/cpp/utils/logging/: logging.cpp  logging.h
Task_4_cpu/examples/: a+b.lang  helloworld.lang  sqeq.lang
Task_5_expressions/: Makefile  README.md  expression_tree.c  expression_tree.h  grammatics.txt  run_tests.c  test.in  test_ok.out
